committing is not working right, trying again

--- a/zoom.html
+++ b/zoom.html
@@ -3,9 +3,6 @@
     <head>
         <script src='zoom.js'></script>
         <link rel='stylesheet' href='zoom.css' type='text/css' />
-        <script type='text/javascript'>
-        
-        </script>
     </head>
     <body onload='init();'>
         <h1>Test</h1>
@@ -16,6 +13,7 @@
                         <div id='zl'><img id='zoomin' src='' /></div>
                         <div id='zr'><img id='zoomout' src='' /></div>
                     </div>
+<!--All images in the smallzoom div will be used for the zoom-->
                     <div id='smallzoom'>
                         <img src='http://t0.gstatic.com/images?q=tbn:ANd9GcTpjZKCZFFd0xUUcyNt1mInaBI78WS0yfLsZALwheqsOS7DBIlo' />
                         <img src='http://t3.gstatic.com/images?q=tbn:ANd9GcTgzPfc38opFmq3QgMOscGE3RtFBoxOBDXqPeVLW4lCHoDhiwPD' />
@@ -27,6 +25,5 @@
                 </div>
             </article>
         </section>
-        <div id='testme'>Test div</div>
     </body>
 </html>
